@@ -140,6 +140,7 @@ int dumb_ups_get_capabilities(UPSINFO *ups)
  */
 int dumb_ups_read_volatile_data(UPSINFO *ups) 
 {
+    SIMPLE_DATA *private = ups->driver_internal_data;
     int stat = 1;
     int BattFail = 0;
 
@@ -153,12 +154,12 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
 
     write_lock(ups);
 
-    ioctl(ups->fd, TIOCMGET, &ups->sp_flags);
+    ioctl(ups->fd, TIOCMGET, &private->sp_flags);
     switch(ups->mode.type) {
     case BK:
     case SHAREBASIC: 
     case NETUPS:
-        if (ups->sp_flags & TIOCM_DTR) {
+        if (private->sp_flags & TIOCM_DTR) {
             BattFail = 1;
         } else {
             BattFail = 0;
@@ -173,7 +174,7 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
         /*
          * This is the ONBATT signal sent by UPS.
          */
-	    if (ups->sp_flags & TIOCM_CD) {
+	    if (private->sp_flags & TIOCM_CD) {
             UPS_SET(UPS_ONBATT);
         } else {
             UPS_CLEAR(UPS_ONBATT);
@@ -186,7 +187,7 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
          * something wrong with battery or charger. Set also the
          * UPS_REPLACEBATT flag if needed.
          */
-        if (ups->sp_flags & TIOCM_SR) {
+        if (private->sp_flags & TIOCM_SR) {
             UPS_CLEAR(UPS_ONLINE);
         } else {
             UPS_SET(UPS_ONLINE);
@@ -196,7 +197,7 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
         } else {
             BattFail = 0;
         }
-        if (!(ups->sp_flags & TIOCM_CTS)) {
+        if (!(private->sp_flags & TIOCM_CTS)) {
             UPS_SET(UPS_BATTLOW);
         } else {
             UPS_CLEAR(UPS_BATTLOW);
@@ -208,12 +209,12 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
 	case APC_940_0128A:
 	case APC_940_0020B:
 	case APC_940_0020C:
-	    if (ups->sp_flags & TIOCM_CTS) {
+	    if (private->sp_flags & TIOCM_CTS) {
             UPS_CLEAR_ONLINE();
         } else {
             UPS_SET_ONLINE();
         }
-        if (ups->sp_flags & TIOCM_CD) {
+        if (private->sp_flags & TIOCM_CD) {
             UPS_SET(UPS_BATTLOW);
         } else {
             UPS_CLEAR(UPS_BATTLOW);
@@ -221,7 +222,7 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
 	    break;
 
 	case APC_940_0023A:
-	    if (ups->sp_flags & TIOCM_CD) {
+	    if (private->sp_flags & TIOCM_CD) {
             UPS_CLEAR_ONLINE();
         } else {
             UPS_SET_ONLINE();
@@ -229,7 +230,7 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
 
 	    /* BOGUS STUFF MUST FIX IF POSSIBLE */
 
-        if (ups->sp_flags & TIOCM_SR) {
+        if (private->sp_flags & TIOCM_SR) {
             UPS_SET(UPS_BATTLOW);
         } else {
             UPS_CLEAR(UPS_BATTLOW);
@@ -238,12 +239,12 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
 
 	case APC_940_0095A:
 	case APC_940_0095C:
-	    if (ups->sp_flags & TIOCM_RNG) {
+	    if (private->sp_flags & TIOCM_RNG) {
             UPS_CLEAR_ONLINE();
         } else {
             UPS_SET_ONLINE();
         }
-        if (ups->sp_flags & TIOCM_CD) {
+        if (private->sp_flags & TIOCM_CD) {
             UPS_SET(UPS_BATTLOW);
         } else {
             UPS_CLEAR(UPS_BATTLOW);
@@ -251,7 +252,7 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
 	    break;
 
 	case APC_940_0095B:
-	    if (ups->sp_flags & TIOCM_RNG) {
+	    if (private->sp_flags & TIOCM_RNG) {
             UPS_CLEAR_ONLINE();
         } else {
             UPS_SET_ONLINE();
@@ -259,12 +260,12 @@ int dumb_ups_read_volatile_data(UPSINFO *ups)
 	    break;
 
 	case MAM_CABLE:
-        if (!(ups->sp_flags & TIOCM_CTS)) {
+        if (!(private->sp_flags & TIOCM_CTS)) {
             UPS_CLEAR_ONLINE();
         } else {
             UPS_SET_ONLINE();
         }
-        if (!(ups->sp_flags & TIOCM_CD)) {
+        if (!(private->sp_flags & TIOCM_CD)) {
             UPS_SET(UPS_BATTLOW);
         } else {
             UPS_CLEAR(UPS_BATTLOW);
